UPDATE: consolidate alert check and bo target cache

--- a/alert.html
+++ b/alert.html
@@ -18,7 +18,7 @@
     }
 
     window.onload = function() {
-        var ack = getCookie("alert-trial-data-volatile");
+        var ack = getCookie("bo-trial-target");
         if (ack == "") {
             document.querySelector("p").innerHTML = "Please enable cookie for correct behavior";
             document.querySelector("input").style.display = "none";
