Add: Attention graph

--- a/alert.html
+++ b/alert.html
@@ -23,7 +23,7 @@
             document.querySelector("p").innerHTML = "Please enable cookie for correct behavior";
             document.querySelector("input").style.display = "none";
         } else {
-            document.querySelector("p").innerHTML = "Attention!!  Data stored here are volatile!!";
+            document.querySelector("p").innerHTML='<img src=\'Attention.png\' width=80%>';
         }
     }
 </script>
