use small pic and large button

--- a/alert.html
+++ b/alert.html
@@ -23,13 +23,13 @@
             document.querySelector("p").innerHTML = "Please enable cookie for correct behavior";
             document.querySelector("input").style.display = "none";
         } else {
-            document.querySelector("p").innerHTML='<img src=\'Attention.png\' width=80%>';
+            document.querySelector("p").innerHTML='<img src=\'Attention.png\' width=50%>';
         }
     }
 </script>
 </head>
 <body>
     <p></p>
-    <input type="button" value="continue" onclick="newDoc()">
+    <input type="button" value="continue" style="width:220px;height:80px;font-size:40px;" onclick="newDoc()">
 </body>
 </html>
